@@ -2,6 +2,7 @@
 - Further improve magnetic grid
 - Add "Duplicate track" feature
 - Show a dialog asking user to restart Aria after changing soundfont
+- Improvements to track default volume feature
 
 1.3 beta 5
 - Added support for selecting sound bank on OSX
